--- a/src/blocks/popup/__form/popup__form.css
+++ b/src/blocks/popup/__form/popup__form.css
@@ -6,6 +6,7 @@
   background-color: white;
   display: flex;
   flex-direction: column;
+  justify-items: center;
   padding: 34px 36px 37px;
   position: relative;
 }
