--- a/src/blocks/popup/__input/_type/popup__input_type_second-row.css
+++ b/src/blocks/popup/__input/_type/popup__input_type_second-row.css
@@ -1,9 +1,3 @@
 .popup__input_type_second-row {
-  margin: 0 0 29px;
-}
-
-@media (max-width: 767px) {
-  .popup__input_type_second-row {
-    margin-bottom: 41px;
-  }
+  margin: 0 0 38px;
 }
