--- a/src/blocks/popup/__title/popup__title.css
+++ b/src/blocks/popup/__title/popup__title.css
@@ -2,7 +2,7 @@
   font-size: 24px;
   line-height: 29px;
   font-weight: 900;
-  margin: 0 0 50px;
+  margin: 0 0 40px;
 }
 
 @media (max-width: 767px) {
